# LabPython3

./: README.md  pyproject.toml
src/: benchmarks.py  constants.py  functions.py  generators.py  heap.py  main.py  queue.py  sortings.py  stack.py
tests/: func_test.py  sort_test.py  stack_test.py
